# plasma-applet-netspeed-widget

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  install.sh  release.sh  run.sh
package/: metadata.desktop  metadata.json
package/contents/code/: utils.js
package/contents/config/: config.qml  main.xml
package/contents/ui/: CompactRepresentation.qml  Launcher.qml  main.qml
package/contents/ui/config/: AppMenuDialog.qml  AppPicker.qml  ColorPicker.qml  ConfigAdvanced.qml  ConfigGeneral.qml
